# OpenDDE

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: docker_installation.md  foldcp_e2e_baseline.md  inference_instructions.md  kernels.md  supported_models.md  tutorial.md
docs/releases/: 1.0.1.md
opendde/: version.py
opendde/config/: dependency_url.py  inference.py  inference_defaults.py  model_manifest.json  model_manifest.py  schema.py
opendde/data/template/: template_featurizer.py  template_utils.py
opendde/data/tools/: kalign.py
opendde/distributed/foldcp/: confidence.py  config.py  launch.py  metrics.py  msa_pair_weighted.py  real_pairformer.py
opendde/metrics/: clash.py
opendde/model/: opendde.py  sample_confidence.py
opendde/model/layer_norm/: layer_norm.py  torch_ext_compile.py
opendde/model/modules/: confidence.py  diffusion.py  pairformer.py
opendde/model/triangular/: layers.py  triangular.py
opendde/utils/: download.py  environment.py  file_io.py  torch_utils.py
runner/: batch_inference.py  cli.py  inference.py
scripts/: build_docker_image.sh  check_release.py  download_opendde_data.sh  render_release_notes.py
tests/: test_dependency_url.py  test_environment.py  test_inference_config.py  test_installation.py  test_kalign.py  test_model_manifest.py  test_release_metadata.py  test_runtime_fallbacks.py  test_triton_compatibility.py
