[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "opendde"
dynamic = ["version"]
description = "Open-Source Drug Design Engine"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Aureka AI Research", email = "ai@aureka.com" },
]
keywords = [
  "alphafold3",
  "protein-structure-prediction",
  "structural-biology",
  "drug-design",
  "diffusion-model",
  "bioinformatics",
  "deep-learning",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]

dependencies = [
  "torch==2.7.1",
  "click>=8.1.0",
  "scipy>=1.9.0",
  "ml_collections==1.1.0",
  "tqdm==4.67.1",
  "pandas==2.3.1",
  "rdkit==2025.9.3",
  "biopython==1.85",
  "biotite==1.4.0",
  "scikit-learn==1.7.1",
  "pydantic>=2.0.0",
  "optree==0.17.0",
  "numpy==2.4.1",
  "networkx>=3.4.2",
  "packaging>=23.2",
  "requests>=2.31.0",
]

[project.optional-dependencies]
cpu = []
gpu = [
  "cuequivariance==0.8.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "cuequivariance-ops-torch-cu12==0.8.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
  "cuequivariance-torch==0.8.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

[project.urls]
Homepage = "https://github.com/aurekaresearch/OpenDDE"
Repository = "https://github.com/aurekaresearch/OpenDDE"
Documentation = "https://github.com/aurekaresearch/OpenDDE/tree/main/docs"
Issues = "https://github.com/aurekaresearch/OpenDDE/issues"
Changelog = "https://github.com/aurekaresearch/OpenDDE/blob/main/CHANGELOG.md"

[project.scripts]
opendde = "runner.cli:opendde_cli"

[dependency-groups]
dev = [
  "pre-commit>=3.7",
  "pytest>=8",
  "ruff>=0.8.6",
]
release = [
  "twine>=5.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["opendde*", "runner*"]
exclude = ["assets*", "benchmark*", "docs*", "examples*", "scripts*", "tests*"]

[tool.setuptools.package-data]
opendde = ["model/layer_norm/kernel/*"]
"opendde.config" = ["model_manifest.json"]

[tool.setuptools.dynamic]
version = { attr = "opendde.version.__version__" }

[tool.uv]
package = true

[tool.pytest.ini_options]
markers = [
  "network: tests that access external network services",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "output",
]

[tool.ruff.lint]
# Keep CI focused on high-confidence syntax and undefined-name checks while the
# existing tree is gradually normalized.
select = ["E9", "F63", "F7", "F82"]
